# maudio-meta

./: .gitignore  CMakeLists.txt  README.txt  init.sh
examples/: CMakeLists.txt  test1.cpp
